edition = "2023";

package runm.v1;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option features.field_presence = IMPLICIT;  // makes everything by default required, for optional set to EXPLICIT

service ShimService {
	rpc ShimKill(ShimKillRequest) returns (ShimKillResponse) {}
}

message ShimKillRequest {}

message ShimKillResponse {
	int64 init_pid = 1;
}
